--- a/java-lang/app/build.gradle
+++ b/java-lang/app/build.gradle
@@ -8,6 +8,7 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+    id 'eclipse'  // Eclipse IDE 관련 작업을 수행할 수 있는 플러그인
 }
 
 repositories {
@@ -41,3 +42,19 @@ tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
 }
+
+
+
+
+// eclipse 프로젝트 이름을 설정하기
+eclipse {
+    project {
+        name = "java-lang"  // 프로젝트 이름을 지정하지 않으면 폴더 이름(app)을 사용한다.
+    }
+    jdt {
+      sourceCompatibility = 21
+      targetCompatibility = 21
+      javaRuntimeName = "JavaSE-21"
+    }
+}
+
