--- a/myapp/app/build.gradle
+++ b/myapp/app/build.gradle
@@ -42,8 +42,8 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
+// '$ gradle run' 명령을 통해 애플리케이션을 실행할 때 키보드 입력을 표준 입력으로 받는 방법
+// System.in : 키보드 입력을 가리킨다.
 run {
-    standardInput = System.in
+    standardInput = System.in // 기본 값은 empty stream 이다.
 }
-
-
