--- a/java-lang/app/build.gradle
+++ b/java-lang/app/build.gradle
@@ -17,6 +17,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.apache.poi:poi-ooxml:5.3.0'
     implementation 'com.drewnoakes:metadata-extractor:2.19.0'
     // Use JUnit Jupiter for testing.
     testImplementation libs.junit.jupiter
