--- a/java-lang/app/build.gradle
+++ b/java-lang/app/build.gradle
@@ -17,6 +17,21 @@ repositories {
 }
 
 dependencies {
+    // MariaDB Driver
+    implementation 'org.mariadb.jdbc:mariadb-java-client:3.4.1'
+    
+
+    // Oracle JDBC Driver
+    implementation 'com.oracle.database.jdbc:ojdbc11:21.15.0.0'
+
+    
+    // MS-SQL(Microsoft SqlServer) JDBC Driver
+    implementation 'com.microsoft.sqlserver:mssql-jdbc:12.8.0.jre11'
+    
+    // MySQL JDBC Driver
+    implementation 'com.mysql:mysql-connector-j:8.4.0'
+    
+
     implementation 'org.apache.poi:poi-ooxml:5.3.0'
     implementation 'com.drewnoakes:metadata-extractor:2.19.0'
     // Use JUnit Jupiter for testing.
