--- a/myapp/app-server/build.gradle
+++ b/myapp/app-server/build.gradle
@@ -17,6 +17,8 @@ dependencies {
     // Tomcat Embedded Server 라이브러리
     implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.93'
 
+    // JSTL API 및 구현체 라이브러리
+    implementation 'javax.servlet:jstl:1.2'
 
     testImplementation libs.junit.jupiter
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
