--- a/java-web/app/build.gradle
+++ b/java-web/app/build.gradle
@@ -8,6 +8,8 @@ repositories {
 }
 
 dependencies {
+    
+    implementation 'javax.servlet:jstl:1.2'
 
     implementation 'commons-fileupload:commons-fileupload:1.5'
 
