--- a/myapp/app-server/build.gradle
+++ b/myapp/app-server/build.gradle
@@ -20,6 +20,18 @@ dependencies {
     // JSTL API 및 구현체 라이브러리
     implementation 'javax.servlet:jstl:1.2'
 
+    // Spring Framework 라이브러리
+    implementation 'org.springframework:spring-webmvc:5.3.39'
+
+    // Spring JDBC 라이브러리
+    implementation 'org.springframework:spring-jdbc:5.3.39'
+
+    // Mybatis 스프링 연동 라이브러리
+    implementation 'org.mybatis:mybatis-spring:2.1.2'
+
+    // Amazon S3 라이브러리
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.772'
+
     testImplementation libs.junit.jupiter
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation libs.guava
