--- a/java-lang/app/build.gradle
+++ b/java-lang/app/build.gradle
@@ -55,7 +55,7 @@ tasks.named('test') {
 // eclipse 프로젝트 이름을 설정하기
 eclipse {
     project {
-        name = "java-java"  // 프로젝트 이름을 지정하지 않으면 폴더 이름(app)을 사용한다.
+        name = "java-lang"  // 프로젝트 이름을 지정하지 않으면 폴더 이름(app)을 사용한다.
     }
     jdt {
       sourceCompatibility = 21
