--- a/myapp/app-server/src/main/resources/config/jdbc.properties
+++ b/myapp/app-server/src/main/resources/config/jdbc.properties
@@ -1,5 +1,5 @@
 # application config
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://db-pfr48-kr.vpc-pub-cdb.ntruss.com/studydb
+jdbc.url=jdbc:mysql://db-pfr48-kr.vpc-pub-cdb.ntruss.com:3306/studydb
 jdbc.username=study
 jdbc.password=bitcamp123!@#
