--- a/spring-webmvc/app/build.gradle
+++ b/spring-webmvc/app/build.gradle
@@ -26,7 +26,14 @@ dependencies {
     implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.93'
     implementation 'javax.servlet:jstl:1.2'
     
-    implementation files('libs/my-library.jar')
+    // implementation files('libs/my-library.jar')
+    
+    implementation 'commons-fileupload:commons-fileupload:1.5'
+    
+    implementation 'com.google.code.gson:gson:2.11.0'
+    
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.0'
+    
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
