--- a/java-lang/app/build.gradle
+++ b/java-lang/app/build.gradle
@@ -30,6 +30,9 @@ dependencies {
 
     // This dependency is used by the application.
     implementation libs.guava
+    
+    // AOP 라이브러리
+    implementation 'org.aspectj:aspectjweaver:1.9.22.1'
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
