--- a/myapp/app-server/build.gradle
+++ b/myapp/app-server/build.gradle
@@ -1,41 +1,11 @@
 plugins {
-    id 'application'
+    id 'java'
+    id 'org.springframework.boot' version '2.7.18'
+    id 'io.spring.dependency-management' version '1.1.6'
 }
 
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    // JDBC Driver
-    implementation 'com.mysql:mysql-connector-j:8.4.0'
-    //implementation 'com.google.code.gson:gson:2.11.0'
-
-    // Persistence Framework
-    implementation 'org.mybatis:mybatis:3.5.16'
-
-    // Tomcat Embedded Server 라이브러리
-    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.93'
-
-    // JSTL API 및 구현체 라이브러리
-    implementation 'javax.servlet:jstl:1.2'
-
-    // Spring Framework 라이브러리
-    implementation 'org.springframework:spring-webmvc:5.3.39'
-
-    // Spring JDBC 라이브러리
-    implementation 'org.springframework:spring-jdbc:5.3.39'
-
-    // Mybatis 스프링 연동 라이브러리
-    implementation 'org.mybatis:mybatis-spring:2.1.2'
-
-    // Amazon S3 라이브러리
-    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.772'
-
-    testImplementation libs.junit.jupiter
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    implementation libs.guava
-}
+group = 'bitcamp'
+version = '0.0.1-SNAPSHOT'
 
 java {
     toolchain {
@@ -43,8 +13,56 @@ java {
     }
 }
 
-application {
-    mainClass = 'bitcamp.myapp.ServerApp'
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    // implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.3.2'
+    // compileOnly 'org.projectlombok:lombok'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    runtimeOnly 'com.mysql:mysql-connector-j'
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+    annotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.3.2'
+
+
+
+    // Tomcat Embedded Server용 JSP 엔진 라이브러리
+    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.83'
+
+    // JSTL API 및 구현체 라이브러리
+    implementation 'javax.servlet:jstl:1.2'
+
+
+    // Persistence Framework
+    // implementation 'org.mybatis:mybatis:3.5.16'
+
+    // Spring Framework 라이브러리
+    // implementation 'org.springframework:spring-webmvc:5.3.39'
+
+    // Spring JDBC 라이브러리
+    // implementation 'org.springframework:spring-jdbc:5.3.39'
+
+    // Amazon S3 라이브러리
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.772'
+
+
+    // Mybatis 스프링 연동 라이브러리
+    // implementation 'org.mybatis:mybatis-spring:2.1.2'
+
+    // implementation libs.guava
 }
 
 tasks.named('test') {
