--- a/myapp/app-server/build.gradle
+++ b/myapp/app-server/build.gradle
@@ -25,18 +25,18 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-    // implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+//    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.3.2'
-    // compileOnly 'org.projectlombok:lombok'
+//    compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.3.2'
-
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 
     // Tomcat Embedded Server용 JSP 엔진 라이브러리
@@ -45,24 +45,10 @@ dependencies {
     // JSTL API 및 구현체 라이브러리
     implementation 'javax.servlet:jstl:1.2'
 
-
-    // Persistence Framework
-    // implementation 'org.mybatis:mybatis:3.5.16'
-
-    // Spring Framework 라이브러리
-    // implementation 'org.springframework:spring-webmvc:5.3.39'
-
-    // Spring JDBC 라이브러리
-    // implementation 'org.springframework:spring-jdbc:5.3.39'
-
     // Amazon S3 라이브러리
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.772'
 
-
-    // Mybatis 스프링 연동 라이브러리
-    // implementation 'org.mybatis:mybatis-spring:2.1.2'
-
-    // implementation libs.guava
+//    implementation libs.guava
 }
 
 tasks.named('test') {
