--- a/myapp/app-server/src/main/resources/application.properties
+++ b/myapp/app-server/src/main/resources/application.properties
@@ -24,9 +24,8 @@ mybatis.type-aliases-package=bitcamp.myapp.vo
 
 spring.web.resources.static-locations=file:src/main/resources/static
 
-spring.mvc.view.prefix=/WEB-INF/jsp/
-spring.mvc.view.suffix=.jsp
-
+spring.thymeleaf.prefix=file:src/main/resources/templates/
+#spring.thymeleaf.suffix=.html
 
 
 
