--- a/myapp/app-server/build.gradle
+++ b/myapp/app-server/build.gradle
@@ -7,6 +7,16 @@ plugins {
 group = 'bitcamp'
 version = '0.0.1-SNAPSHOT'
 
+// 스프링부트 실행 jar 파일을 만들 때 파일명 설정
+bootJar {
+    archiveFileName = "${rootProject.name}.jar"
+}
+
+// jar 태스크를 수행하지 않게 설정
+tasks.named("jar") {
+    enabled = false
+}
+
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(21)
@@ -28,6 +38,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.3.2'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.mysql:mysql-connector-j'
@@ -35,12 +47,14 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.3.2'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 
     // Amazon S3 라이브러리
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.772'
+
 
 //    implementation libs.guava
 }
